login page and route added; flashed messages are no longer displayed as a list

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -29,7 +29,7 @@ Please input your information below.
     </label>
     <br>
     <label>Password
-        <input type="text" name="password" placeholder="Something Secret!" required>
+        <input type="password" name="password" placeholder="Something Secret!" required>
     </label>
     <input type="submit" value="Register">
 </form>
