--- a/templates/home.html
+++ b/templates/home.html
@@ -12,4 +12,13 @@
 <h2>Users</h2>
 <p><a href="/users">View all users</a></p>
 
+<h2>Register</h2>
+<p><a href="/registration">Sign up for a new account</a></p>
+
+<h2>Log In</h2>
+<p><a href="/login">Log In</a></p>
+
+<h2>Log Out</h2>
+<p><a href="/logout">Log Out</a></p>
+
 {% endblock %}
