--- a/templates/users.html
+++ b/templates/users.html
@@ -7,7 +7,7 @@
     <ul>
       {% for user in users %}
           <li>
-              <a href="/users/{{ user.user_id }}">
+              <a href="/user/{{ user.user_id }}">
                 {% if user.email %}
                     User {{ user.user_id }} ({{ user.email }})
                 {% else %}
