--- a/templates/movie-info.html
+++ b/templates/movie-info.html
@@ -8,29 +8,45 @@
 
 <p>IMDB: <a href="{{ movie.imdb_url }}">{{ movie.title }}</a></p>
 <p>Average rating: {{ "%.1f"|format(avg_rating) }}</p>
-{% if users_rating %}
-   <form method="POST" action="/update-rating/{{ movie.movie_id }}">
-     <label>Rate again!<select name="rating" default="{{ users_rating }}">
-        <option value="1">1
-        <option value="2">2
-        <option value="3">3
-        <option value="4">4
-        <option value="5">5
-      </select>
-    </label>
-  </form>
 
+{# if user is logged in, give them an option to rate or update their #}
+{# previous rating #}
+{% if session.get("user_id") %} 
+
+  {# if they rated the movie previously, give them an update form#}
+  {% if users_rating %}
+    <form method="POST" action="/update-rating/{{ movie.movie_id }}">
+      <label>Rate again! (Your current rating is a {{ users_rating }}.)
+        <br> 
+        <select name="rating">
+          <option value="1">1
+          <option value="2">2
+          <option value="3">3
+          <option value="4">4
+          <option value="5">5
+        </select>
+        <input type="submit" value="Rate!">
+      </label>
+    </form>
+
+  {# otherwise, give them a rating form #}
+  {% else %}
+     <form method="POST" action="/rate/{{ movie.movie_id }}">
+       <label>Rate!  <select name="rating">
+          <option value="1">1
+          <option value="2">2
+          <option value="3">3
+          <option value="4">4
+          <option value="5">5
+        </select>
+        <input type="submit" value="Rate!">
+      </label>
+    </form>
+  {% endif %}
+
+{# if the user isn't logged in, give them the option to do so so they can rate #}
 {% else %}
-   <form method="POST" action="/rate/{{ movie.movie_id }}">
-     <label>Rate!  <select name="rating">
-        <option value="1">1
-        <option value="2">2
-        <option value="3">3
-        <option value="4">4
-        <option value="5">5
-      </select>
-    </label>
-  </form>
+<p><a href="/login">Login</a>/<a href="/registration">Register</a> to rate!</p>
 {% endif %}
 
 <p>Ratings:</p>
